// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Index Entrypoint exports AbstractEndpoint should have certain value 1`] = `[Function]`;

exports[`Index Entrypoint exports Client should have certain value 1`] = `[Function]`;

exports[`Index Entrypoint exports DependsOnMethod should have certain value 1`] = `[Function]`;

exports[`Index Entrypoint exports DependsOnMethodError should have certain value 1`] = `[Function]`;

exports[`Index Entrypoint exports EndpointsFactory should have certain value 1`] = `[Function]`;

exports[`Index Entrypoint exports InputValidationError should have certain value 1`] = `[Function]`;

exports[`Index Entrypoint exports OpenAPI should have certain value 1`] = `[Function]`;

exports[`Index Entrypoint exports OpenAPIError should have certain value 1`] = `[Function]`;

exports[`Index Entrypoint exports OutputValidationError should have certain value 1`] = `[Function]`;

exports[`Index Entrypoint exports RoutingError should have certain value 1`] = `[Function]`;

exports[`Index Entrypoint exports ServeStatic should have certain value 1`] = `[Function]`;

exports[`Index Entrypoint exports attachRouting should have certain value 1`] = `[Function]`;

exports[`Index Entrypoint exports createConfig should have certain value 1`] = `[Function]`;

exports[`Index Entrypoint exports createHttpError should have certain value 1`] = `[Function]`;

exports[`Index Entrypoint exports createLogger should have certain value 1`] = `[Function]`;

exports[`Index Entrypoint exports createMiddleware should have certain value 1`] = `[Function]`;

exports[`Index Entrypoint exports createResultHandler should have certain value 1`] = `[Function]`;

exports[`Index Entrypoint exports createServer should have certain value 1`] = `[Function]`;

exports[`Index Entrypoint exports defaultEndpointsFactory should have certain value 1`] = `
EndpointsFactory {
  "middlewares": [],
  "resultHandler": {
    "getNegativeResponse": [Function],
    "getPositiveResponse": [Function],
    "handler": [Function],
  },
  "use": [Function],
}
`;

exports[`Index Entrypoint exports defaultResultHandler should have certain value 1`] = `
{
  "getNegativeResponse": [Function],
  "getPositiveResponse": [Function],
  "handler": [Function],
}
`;

exports[`Index Entrypoint exports ez should have certain value 1`] = `
{
  "dateIn": [Function],
  "dateOut": [Function],
  "file": [Function],
  "upload": [Function],
}
`;

exports[`Index Entrypoint exports getMessageFromError should have certain value 1`] = `[Function]`;

exports[`Index Entrypoint exports getStatusCodeFromError should have certain value 1`] = `[Function]`;

exports[`Index Entrypoint exports should have certain entities exposed 1`] = `
[
  "createConfig",
  "LoggerConfig",
  "AbstractEndpoint",
  "Method",
  "EndpointsFactory",
  "defaultEndpointsFactory",
  "IOSchema",
  "FlatObject",
  "getMessageFromError",
  "getStatusCodeFromError",
  "createLogger",
  "createMiddleware",
  "createResultHandler",
  "defaultResultHandler",
  "DependsOnMethod",
  "ServeStatic",
  "Routing",
  "createServer",
  "attachRouting",
  "OpenAPI",
  "OpenAPIError",
  "DependsOnMethodError",
  "RoutingError",
  "OutputValidationError",
  "InputValidationError",
  "withMeta",
  "testEndpoint",
  "Client",
  "ez",
  "createHttpError",
]
`;

exports[`Index Entrypoint exports testEndpoint should have certain value 1`] = `[Function]`;

exports[`Index Entrypoint exports withMeta should have certain value 1`] = `[Function]`;
